Replaced      new Boolean(...) with      Boolean.valueOf(...) everywhere. (Booleans are immutable; no need to create new objects every time.) Every little helps...
(from subversion r15117)