@@ -96,7 +96,7 @@ public class CatchElement extends ContainerCodeElement implements JavaSingleLine
             contents.add(member);
             member.setParent(this);
         }
-        enable = new Boolean(el.getAttributeValue("enable"));
+        enable = Boolean.valueOf(el.getAttributeValue("enable"));
     }
 
     @Override
