@@ -87,7 +87,7 @@ public class FinallyElement extends ContainerCodeElement implements JavaSingleLi
             contents.add(member);
             member.setParent(this);
         }
-        enable = new Boolean(el.getAttributeValue("enable"));
+        enable = Boolean.valueOf(el.getAttributeValue("enable"));
     }
 
     @Override
