@@ -108,7 +108,7 @@ public class ForeachElement extends ContainerCodeElement
             contents.add(member);
             member.setParent(this);
         }
-        enable = new Boolean(el.getAttributeValue("enable"));
+        enable = Boolean.valueOf(el.getAttributeValue("enable"));
     }
 
     @Override
