@@ -113,7 +113,7 @@ public abstract class MethodWithBodyElement extends DocumentContainerCodeElement
         if (documentation == null) {
             documentation = new JavadocUnit("");
         }
-        enable = new Boolean(el.getAttributeValue("enable"));
+        enable = Boolean.valueOf(el.getAttributeValue("enable"));
     }
     
     public MethodWithBodyElement(String access, List<Entry<String,String>> params, List<CodeElement> contents, String documentation)
