@@ -71,10 +71,10 @@ public class NormalMethodElement extends MethodWithBodyElement
         super(el);
         
         Attribute staticAttribute = el.getAttribute("static");
-        staticModifier = (staticAttribute == null) ? false : new Boolean(staticAttribute.getValue());
+        staticModifier = (staticAttribute == null) ? false : Boolean.valueOf(staticAttribute.getValue());
         
         Attribute finalAttribute = el.getAttribute("final");
-        finalModifier = (finalAttribute == null) ? false : new Boolean(finalAttribute.getValue());
+        finalModifier = (finalAttribute == null) ? false : Boolean.valueOf(finalAttribute.getValue());
         
         returnType = new TypeSlotFragment(el.getAttributeValue("type"));
         name = new NameDefSlotFragment(el.getAttributeValue("name"));
