@@ -94,7 +94,7 @@ public class WhileElement extends ContainerCodeElement implements JavaSingleLine
             contents.add(member);
             member.setParent(this);
         }
-        enable = new Boolean(el.getAttributeValue("enable"));
+        enable = Boolean.valueOf(el.getAttributeValue("enable"));
     }
 
     @Override
